--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
 	itunestoken: "1000lIPN",
 	metadatatechnic: "creativo-agencia-metadato",
 	ownmetadataurl: "",
-	streamurl: "https://stream-155.zeno.fm/tfacfnfgxuquv?zt=",
+	streamurl: "https://stream.zeno.fm/e7wppvzkrxquv",
 	streamtype: "zeno",
-        idzeno: "tfacfnfgxuquv",
+        idzeno: "e7wppvzkrxquv",
 	icecastmountpoint: "",
 	radionomyid: "",
 	radionomyapikey: "",
