--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 	itunestoken: "1000lIPN",
 	metadatatechnic: "creativo-agencia-metadato",
 	ownmetadataurl: "",
-	streamurl: "https://stream.zeno.fm/e7wppvzkrxquv",
+	streamurl: "https://stream-172.zeno.fm/e7wppvzkrxquv?zt=",
 	streamtype: "zeno",
         idzeno: "e7wppvzkrxquv",
 	icecastmountpoint: "",
