--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <p>Siguenos en la Redes</p>
                         <li>
                             <a href="https://www.facebook.com/profile.php?id=1000422191436" target="_blank"><img src="img/facebook.png" alt="facebook" width="48" height="48"></a>
-                            <a href="https://www.dailymotion.com/cdn/live/video/x9s3ad6.m3u8?sec=ecpCJmWPQ-909KE1bIT1UPVjZnGqJeWJYJIeNDcKPF43YRAa8Jh5pAP5ik1fZhNTMj2Rnlg2oZKkdx8ck3KpA2JUjzPICpWzQE2t0gwkmBxiDqvMeF1lDC7N4v8nXsPE&dmTs=853349&dmV1st=ef8db24a-575a-4fdd-8c30-5bf7c41c0b06" target="_blank"><img src="img/instagram.png" alt="instagram" width="48" height="48"></a>
+                            <a href="https://www.dailymotion.com/cdn/live/video/x9s3ad6.m3u8?sec=ecpCJmWPQ-909KE1bIT1UPVjZnGqJeWJYJIeNDcKPF43YRAa8Jh5pAP5ik1fZhNTMj2Rnlg2oZKkdx8ck3KpA2JUjzPICpWzQE2t0gwkmBxiDqvMeF1lDC7N4v8nXsPE&dmTs=853349&dmV1st=ef8db24a-575a-4fdd-8c30-5bf7c41c0b06" target="_blank"><img src="img/tv.png" alt="instagram" width="48" height="48"></a>
 
                             <a href="https://wa.me/5198901629" target="_blank"><img src="img/whatsapp.png" alt="whatsapp" width="48" height="48"></a>
                             
